--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="assets/css/index.css">
+        <script src="https://kit.fontawesome.com/0491bf1fd4.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div id="splash" style="display:none">
