--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -1,14 +1,16 @@
 <div class="home-content">
+
     <div class="bottom-bar-home">
         <button class="player-head"></button>
-        <button class="settings-btn icon-settings"></button>
+        <div class="player-name">Neve Launcher</div>
 
         <div class="play-element">
-            <button class="play-btn">Jouer</button>
+            <button class="play-btn"><i class="fa-solid fa-play"></i> Jouer</button>
             <div class="download-content">
                 <div class="text-download">Connexion...</div>
                 <progress value="0" max="0" class="progress-bar"></progress>
             </div>
+            <button class="settings-btn icon-settings"></button>
         </div>
     </div>
     
