--- a/src/launcher.html
+++ b/src/launcher.html
@@ -7,7 +7,7 @@
     <body class="hide">
         <!-- full screen youtube video background -->
         <div class="video-background">
-            <iframe id="video" src="https://www.youtube.com/embed/5e1wvp5j3vI?autoplay=1&controls=0&loop=1&modestbranding=1&showinfo=0&rel=0&iv_load_policy=3&enablejsapi=1&widgetid=1&mute=1" frameborder="0" allowfullscreen></iframe>
+            <iframe id="video" src="https://www.youtube.com/embed/5e1wvp5j3vI?autoplay=1&controls=0&loop=1&modestbranding=1&showinfo=0&rel=0&iv_load_policy=3&enablejsapi=1&widgetid=1&mute=1&playlist=5e1wvp5j3vI" frameborder="0" allowfullscreen></iframe>
         </div>
         <style>
             .video-background {
@@ -28,7 +28,7 @@
             }
         </style>
         <div class="dragbar">
-            <p>Neve Launcher - Version 2.0.3</p>
+            <p>Neve Launcher - Version 2.0.4</p>
         </div>
         <div class="frame">
             <div id="minimize" class="button-frame icon-minimize"></div>
