--- a/src/panels/login.html
+++ b/src/panels/login.html
@@ -3,8 +3,36 @@
         <img src="./assets/images/icon.png" alt="logo" class="logo" style="width: 75px;margin-top: -40px;">
         <p>Utilisez votre compte <span class="store">Minecraft</span> pour vous connectez au launcher.</p>
         <div class="login-type">
+            <button class="mojang login-type-btn" style="display:none;">Mojang</button>
             <button class="microsoft login-type-btn">Connexion avec Microsoft</button>
         </div>
         <button class="cancel cancel-login" style="display: none;">Annuler</button>
     </div>
+
+    <div class="login-card-mojang">
+        <div class="card-body">
+            <small class="info-login">&nbsp;</small>
+
+            <div class="login-card-mojang-input">
+                <label>Adresse mail</label>
+                <input type="text" class="Mail login-mojang-input" spellcheck="false">
+                <small class="error-mail">&nbsp;</small>
+            </div>
+
+            <div class="login-card-mojang-input">
+                <label>Mot de passe</label>
+                <input type="password" class="Password login-mojang-input" spellcheck="false">
+                <small class="error-password">&nbsp;</small>
+            </div>
+
+            <div class="login-options">
+                <span class="password-reset">Mot de passe oublié ?</span>
+                <div class="btn-option-login">
+                    <button class="login-btn">Connexion</button>
+                    <button class="cancel cancel-mojang">Annuler</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
