--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self';">
         <link rel="stylesheet" href="assets/css/index.css">
         <script src="https://kit.fontawesome.com/0491bf1fd4.js" crossorigin="anonymous"></script>
     </head>
@@ -9,8 +10,8 @@
             <img class="splash" src="assets/images/icon.png" />
             <p class="splash-message"></p>
             <p class="splash-author"><span class="author"></span></p>
-            <p class="message">Recherche de mise à jour</p>
-            <progress value="0" max="0"></progress>
+            <p class="message">Recherche de mise à jour...</p>
+            <progress value="0" max="0" class="progress"></progress>
         </div>
         <script src="assets/js/index.js" type="module"></script>
     </body>
